# test_frame_interpolation

./: README.md  gen_frame_interpolation_res.py  requirements.txt
cuda/: CMakeLists.txt
cuda/demo/: CMakeLists.txt  demo_psnr.cu
cuda/include/: similarity_check.hpp
cuda/src/: .similarity_check.cu.swp  CMakeLists.txt  similarity_check.cu
python/: README.md  bayesian_optimization.py  demo_bayesian_optimization.py  demo_eval.py  demo_gen_frame_interpolation_res.py  demo_two_frames_interpolation_res.py  demo_vmaf.py  exe.sh  frame_interpolation_test.py  gen_dataset_list.py  gen_frame_interpolation_res.py
